# agent-sdk

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: notify-agents.yml
agent_sdk/: __init__.py  checkpoint.py  checkpoint_resilient.py  config.py  context.py  errors.py  logging.py  metrics.py
agent_sdk/a2a/: __init__.py  executor.py  factory.py
agent_sdk/a2a/server/: mongodb_task_store.py
agent_sdk/agents/: __init__.py  base_agent.py  formatters.py  graph.py  llm_utils.py  memory_nodes.py  nodes.py  research_graph.py  response_validator.py  state.py  tool_executor.py
agent_sdk/agents/subgraphs/: __init__.py  phase_subgraph.py  react_subgraph.py
agent_sdk/auth/: __init__.py  keycloak.py
agent_sdk/cache/: __init__.py  redis_cache.py
agent_sdk/database/: __init__.py  gridfs_mixin.py  memory.py  mongo.py
agent_sdk/financial/: __init__.py  causal_graph.py  ontology.py  orchestrator.py  phase_helpers.py  phase_registry.py  prompts.py  quant_tools.py  schemas.py  utils.py  validators.py
agent_sdk/llm_factory/: agent_llm.py
agent_sdk/llm_services/: agent_llm.py  model_registry.py  summarizer_llm.py
agent_sdk/mcp/: __init__.py  circuit_breaker.py  client.py  exceptions.py
agent_sdk/memory/: __init__.py  backend.py  manager.py  prod_backend.py  semantic.py
agent_sdk/middleware/: infra.py  security.py
agent_sdk/observability/: __init__.py  sentry.py
agent_sdk/secrets/: __init__.py  akv.py
agent_sdk/server/: app_factory.py  error_handlers.py  models.py  session.py  sse.py  streaming.py
agent_sdk/sub_agents/: __init__.py  base.py  registry.py  routing_templates.py
agent_sdk/sub_agents/definitions/: bull_bear.py  company_profiling.py  compliance.py  fundamental.py  jargon_simplifier.py  macro.py  news_sentiment.py  portfolio_fit.py  risk.py  sector.py  synthesis.py  technical.py  user_profiling.py
agent_sdk/utils/: context.py  env.py  mcp_utils.py  output.py  pdf.py  text.py  validation.py
agent_sdk/workspace/: __init__.py  store.py
tests/: conftest.py
tests/unit/: test_circuit_breaker.py  test_dispatcher.py  test_extract_json.py  test_infra_middleware.py  test_model_registry.py  test_orchestrator_v2.py  test_phase_return.py  test_phase_subgraph.py  test_phase_subgraph_wiring.py  test_routing.py  test_routing_templates.py  test_state_workspace.py  test_sub_agent_base.py  test_validation.py  test_workspace_store.py
