[project]
name = "agent-sdk"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=1.2.12,<2.0.0)",
    "langgraph (>=1.0.10,<2.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.24.0,<3.0.0)",
    "pydantic (>=2.12.5,<4.0.0)",
    "pydantic-settings (>=2.0.0,<4.0.0)",
    "langchain-openai (>=0.3.0,<1.0.0)",
    "langchain-mcp-adapters (>=0.1.0)",
    "networkx (>=3.0,<4.0.0)",
    "prometheus-client (>=0.20.0,<1.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
pytest-mock = ">=3.14.0"

[tool.poetry]
package-mode = true
packages = [{include = "agent_sdk"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
