[project]
name = "agent-sdk"
version = "0.2.1"
description = "Shared SDK for agent-hub multi-agent system"
authors = [
    {name = "Pranjal Verma",email = "pranjalv23@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=1.2.12,<2.0.0)",
    "langgraph (>=1.0.10,<2.0.0)",
    "fastapi (>=0.136.0,<1.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.24.0,<3.0.0)",
    "pydantic (>=2.12.5,<4.0.0)",
    "pydantic-settings (>=2.0.0,<4.0.0)",
    "langchain-openai (>=0.3.0,<1.0.0)",
    "langchain-mcp-adapters (>=0.2.2,<0.3.0)",
    "networkx (>=3.0,<4.0.0)",
    "prometheus-client (>=0.20.0,<1.0.0)",
    "motor (>=3.6.0,<4.0.0)",
    "pymongo (>=4.10.0,<5.0.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "pinecone (>=8.1.0,<9.0.0)",
    "a2a-sdk (>=1.0.0,<2.0.0)",
    "PyJWT[crypto] (>=2.10.0,<3.0.0)",
    "starlette (>=0.45.0,<1.0.0)",
]

[project.optional-dependencies]
memory = [
    "mem0ai (>=1.0.5,<2.0.0)",
]
akv = [
    "azure-keyvault-secrets (>=4.8.0,<5)",
    "azure-identity (>=1.17.0,<2)",
]
redis = ["redis[hiredis] (>=5.2.0,<6)"]
sentry = ["sentry-sdk[fastapi] (>=2.16.0,<3)"]
all = [
    "mem0ai (>=1.0.5,<2.0.0)",
    "azure-keyvault-secrets (>=4.8.0,<5)",
    "azure-identity (>=1.17.0,<2)",
    "redis[hiredis] (>=5.2.0,<6)",
    "sentry-sdk[fastapi] (>=2.16.0,<3)",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
pytest-mock = ">=3.14.0"

[tool.poetry]
package-mode = true
packages = [{include = "agent_sdk"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
